# src/main/java/kr/hhplus/be/server/api/order/dto/PaymentResponseDto.java
@@ -1,0 +1,9 @@
+package kr.hhplus.be.server.api.order.dto;
+
+public record PaymentResponseDto(
+        Long paymentId,
+        Long orderId,
+        String status,
+        String paymentMethod,
+        int amount
+) {}
